<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jordan.daniel.pizzapalace.ContactFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_message"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/phoneButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_call" />

    <Button
        android:id="@+id/emailButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_email" />

    <Button
        android:id="@+id/facebookButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_social_media" />
</LinearLayout>
